Fixed image stretching for iOS

--- a/src/index.css
+++ b/src/index.css
@@ -568,6 +568,9 @@ a {
 
 .card__animated--image {
   flex-grow: 1;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 /*
